--- a/confirmation.html
+++ b/confirmation.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Page confirmation ourson Orinoco</title>
-      <link rel="stylesheet" type="text/css" href="../sass/style.css" />
+      <link rel="stylesheet" type="text/css" href="sass/main.css" />
       <script src="https://kit.fontawesome.com/7574934ccb.js" crossorigin="anonymous"></script>
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
       <header>
          <!--Barre de navigation-->
          <nav>
-            <figure><a href="index.html"><img src="../images/orinoco.png" alt="titre"></figure>
+            <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure>
             </a>
             <div class="haut">
                <p class="onglet">Nouveautés</p>
