--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
          <!--Barre de navigation-->
          <nav>
-            <figure><a href="index.html"><img src="../images/orinoco.png" alt="titre"></figure>
+            <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure>
             </a>
             <div class="haut">
                <p class="onglet">Nouveautés</p>
@@ -35,7 +35,7 @@
          <div id="oursons">
             <div class="teddie1 ours">
                <a href="produit.html">
-                  <figure> <img src="../images/teddy_1.jpg" alt=""></figure>
+                  <figure> <img src="images/teddy_1.jpg" alt=""></figure>
                </a>
                <div class="descriptionPrice">
                 <div class="name"> Norbert</div>
@@ -46,7 +46,7 @@
 
             <div class="teddie1">
                <a href="produit.html">
-                  <figure> <img src="../images/teddy_2.jpg" alt=""></figure>
+                  <figure> <img src="images/teddy_2.jpg" alt=""></figure>
                </a>
                <div class="descriptionPrice">
                 <div class="name">Arnold</div>
@@ -57,7 +57,7 @@
 
             <div class="teddie1">
                <a href="produit.html">
-                  <figure><img src="../images/teddy_3.jpg" alt=""></figure>
+                  <figure><img src="images/teddy_3.jpg" alt=""></figure>
                </a>
                <div class="descriptionPrice">
                 <div class="name"> Lenny and Carl</div>
@@ -68,7 +68,7 @@
 
             <div class="teddie1">
                <a href="produit.html">
-                  <figure> <img src="../images/teddy_4.jpg" alt=""></figure>
+                  <figure> <img src="images/teddy_4.jpg" alt=""></figure>
                </a>
                <div class="descriptionPrice">
                 <div class="name"> Gustav</div>
@@ -79,7 +79,7 @@
 
             <div class="teddie1">
                <a href="produit.html">
-                  <figure> <img src="../images/teddy_5.jpg" alt=""></figure>
+                  <figure> <img src="images/teddy_5.jpg" alt=""></figure>
                </a>
                <div class="descriptionPrice">
                 <div class="name"> Garfunkel</div>
