--- a/panier.html
+++ b/panier.html
@@ -17,7 +17,7 @@
       <header>
          <!--Barre de navigation-->
          <nav>
-            <figure><a href="index.html"><img src="../images/orinoco.png" alt="titre"></figure>
+            <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure>
             </a>
             <div class="haut">
                <p class="onglet">Nouveautés</p>
