--- a/produit.html
+++ b/produit.html
@@ -19,7 +19,7 @@
     <header>
       <!--Barre de navigation-->
       <nav>
-      <figure><a href="index.html"><img src="../images/orinoco.png" alt="titre"></figure></a>
+      <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure></a>
         <div class="haut">
           <p class="onglet">Nouveautés</p>
           <p class="onglet">Appareil photos</p>
@@ -36,7 +36,7 @@
         <div id="oursons">
             <div class="teddie1">
                <a href="produit.html">
-                  <figure> <img src="../images/teddy_1.jpg" alt=""></figure>
+                  <figure> <img src="images/teddy_1.jpg" alt=""></figure>
                </a>
                <div class="descriptionPrice">
                 <div class="name"> Norbert</div>
