--- a/confirmation.html
+++ b/confirmation.html
@@ -31,7 +31,7 @@
       </header>
         <main>
             <div class="validation">
-                <h1>Félicitatiion votre commmande à bien été validé elle vous sera livrée très prochainement</h1>
+                <h1>Félicitation votre commande a bien été validé elle vous sera livrée très prochainement</h1>
                 <p class="indentifiant">identifiant de votre commande numero 14665887648</p>
             </div>
 
