--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -17,7 +17,7 @@
          <header>
             <!--Barre de navigation-->
             <nav>
-               <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure></a>
+               <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
                <div class="haut">
                   <p class="onglet">Nouveautés</p>
                   <p class="onglet">Appareil photos</p>
@@ -44,4 +44,5 @@
          </footer>
       </div>
    </body>
+   <script src="js/script.js"></script>
 </html>
