--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,13 +16,12 @@
       <header>
          <!--Barre de navigation-->
          <nav>
-            <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure>
-            </a>
+            <figure><a href="index.html"> <img src="images/orinoco.png" alt="titre"> </a></figure>
             <div class="haut">
                <p class="onglet">Nouveautés</p>
                <p class="onglet">Appareil photos</p>
                <p class="onglet">Meuble</p>
-               <p class="onglet">Oursons</p>
+               <a href="index.html"><p class="onglet">Oursons</p></a>
                <a href="panier.html"><p class="onglet"> <i class="fas fa-shopping-cart"></i></p></a>
             </div>
          </nav>
