--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -19,13 +19,13 @@
     <header>
       <!--Barre de navigation-->
       <nav>
-      <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></figure></a>
+      <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
         <div class="haut">
           <p class="onglet">Nouveautés</p>
           <p class="onglet">Appareil photos</p>
           <p class="onglet">Meuble</p>
           <p class="onglet">Oursons</p>
-          <p class="onglet"> <a href="panier.html"><i class="fas fa-shopping-cart"></i></p></a>
+          <p class="onglet"> <a href="panier.html"><i class="fas fa-shopping-cart"></i></a></p>
         </div>
       </nav>
       <!-- Fin de la barre de navigation-->
