--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -17,7 +17,7 @@
          <header>
             <!--Barre de navigation-->
             <nav>
-               <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
+               <figure><a href="../index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
                <div class="haut">
                   <p class="onglet">Nouveautés</p>
                   <p class="onglet">Appareil photos</p>
@@ -43,6 +43,7 @@
             </div>
          </footer>
       </div>
+      <script src="js/script.js"></script>
    </body>
-   <script src="js/script.js"></script>
+   
 </html>
