--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -15,11 +15,11 @@
 </head>
 <body onload="selectProduct()">
   
-  <div class="page">
+  <div class="pageProduit">
     <header>
       <!--Barre de navigation-->
       <nav>
-      <figure><a href="index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
+      <figure><a href="../index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
         <div class="haut">
           <p class="onglet">Nouveautés</p>
           <p class="onglet">Appareil photos</p>
