changement de style

--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -10,10 +10,9 @@
       <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-      <script src="script.js"></script>
    </head>
    <body>
-      <div class="page">
+      <div class="confirmation">
          <header>
             <!--Barre de navigation-->
             <nav>
@@ -29,9 +28,10 @@
             <!-- Fin de la barre de navigation-->
          </header>
          <main>
-               <div class="validation">
+               <div id="validation">
                   <h1>Félicitation votre commande a bien été validé elle vous sera livrée très prochainement</h1>
-                  <p class="indentifiant">identifiant de votre commande numero 14665887648</p>
+                  <div id="indentifiant"></div>
+                  <div id="totalPrice"></div>
                </div>
             </main>
          <footer>
