--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -17,7 +17,7 @@
         <header>
          <!--Barre de navigation-->
          <nav>
-            <figure><a href="../index.html"><img src="frontend/images/orinoco.png" alt="titre"></a></figure>
+            <figure><a href="../index.html"><img src="orinoco.png" alt="titre"></a></figure>
             
             <div class="haut">
                <p class="onglet">Nouveautés</p>
