--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -16,7 +16,7 @@
          <header>
             <!--Barre de navigation-->
             <nav>
-               <figure><a href="../index.html"><img src="images/orinoco.png" alt="titre"></a></figure>
+               <figure><a href="../index.html"><img src="/images/orinoco.png" alt="titre"></a></figure>
                <div class="haut">
                   <p class="onglet">Nouveautés</p>
                   <p class="onglet">Appareil photos</p>
@@ -35,7 +35,7 @@
                   <a href="../index.html"><button id="retour">Retourner au menu ourson</button></a>
                </div>
          </main>
-         
+
          <footer>
          <a href="mailto:asidibe017@gmail.com"><p>Contactez-nous</p></a>
          <div id="social">
