--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -38,6 +38,7 @@
                             <tr>
                                 <th>Nom</th>
                                 <th>Prix</th>
+                                <th>Couleur</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
